plugins {
	id "java"
	id "war"
	id "org.springframework.boot" version "3.2.3"
	id "io.spring.dependency-management" version "1.1.4"
    id 'org.jetbrains.kotlin.jvm'
	id "org.sonarqube" version "5.0.0.4638"
}

group = "fr.eseo"
version = "0.0.1-SNAPSHOT"

java {
}

repositories {
	mavenCentral()
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-web"
	providedRuntime "org.springframework.boot:spring-boot-starter-tomcat"
	testImplementation "org.springframework.boot:spring-boot-starter-test"
	implementation "org.hibernate.orm:hibernate-core:6.4.4.Final"
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.3'
	implementation 'com.mysql:mysql-connector-j:8.3.0'
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
	implementation 'com.opencsv:opencsv:5.8'
	implementation 'net.datafaker:datafaker:2.1.0'
}

tasks.named("test") {
	useJUnitPlatform()
}
kotlin {
    jvmToolchain(17)
}
